style: fix mobile nav column gap

--- a/src/client/components/common/Dropdown/Dropdown.module.scss
+++ b/src/client/components/common/Dropdown/Dropdown.module.scss
@@ -107,7 +107,7 @@
     flex-direction: column;
     padding: 0 0 rem(24px);
 
-    row-gap: rem(40px);
+    row-gap: rem(24px);
   }
 
   &.onlyLeft {
